<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/ic_bg"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quiz_app"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="@dimen/textLarge"
        android:textColor="@color/white"
        android:layout_marginBottom="30dp" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginLarge"
        android:layout_marginEnd="@dimen/marginLarge"
        android:background="@color/white"
        app:cardCornerRadius="@dimen/radiusLarge">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/marginNormal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="@dimen/textLarger"
                android:textColor="#363A43" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/please_enter_your_name"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="@dimen/textSmall"
                android:layout_marginTop="@dimen/marginNormal"
                android:textColor="#7A8089" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/e_g_jhon"
                    android:inputType="textCapWords"
                    android:textSize="@dimen/textNormal"
                    android:textColor="#363A43"
                    android:textColorHint="#7A8089" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginNormal"
                android:background="@color/design_default_color_on_primary"
                android:text="@string/start"
                android:textColor="@color/white"
                android:textSize="@dimen/textNormal"
                android:textAllCaps="false"
                app:cornerRadius="@dimen/radiusSmall" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>